[gd_scene load_steps=11 format=3 uid="uid://dbkjcculeg0ua"]

[ext_resource type="Script" path="res://Scripts/rest_area.gd" id="1_btqlt"]
[ext_resource type="Material" uid="uid://idfondkli3u7" path="res://Art/Purple.tres" id="2_hwe72"]
[ext_resource type="Script" path="res://Scripts/speech.gd" id="2_jllgn"]
[ext_resource type="PackedScene" uid="uid://eep5xdbde5p4" path="res://Art/Models/Tree.glb" id="3_7c5bb"]
[ext_resource type="Theme" uid="uid://bv8rbbpyb8qig" path="res://Art/BaseTheme.tres" id="4_4n78b"]
[ext_resource type="Texture2D" uid="uid://bijmbs1oqyewd" path="res://Art/Sprites/Nun.png" id="5_5hvso"]

[sub_resource type="Resource" id="Resource_veh8i"]
script = ExtResource("2_jllgn")
text = "Hi"
anim = ""
speaker = "P"

[sub_resource type="BoxMesh" id="BoxMesh_02o2l"]

[sub_resource type="BoxShape3D" id="BoxShape3D_j6a77"]
size = Vector3(30, 1, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_k7lrr"]
size = Vector3(0.2, 30, 4)

[node name="RestArea3" type="Node3D"]
script = ExtResource("1_btqlt")
itemIndex = 1
anims = Array[String](["", "", "", "", "", "", "", ""])
dialogue = Array[String](["Hey, are you alright?", "It... it's my husband. It was the most awful thing. We were seeking out the SUPREME MURDER MEISTER GOD KING to get out of this cursed place.", "We tried to sneak past one of those things, but it noticed us and attacked. He was able to fend it off but his wounds were too grave. He’s dying.", "That sucks. I wish I could help, but I need to keep moving.", "Wait. That pendant around your neck- is it a Pendant of Protection?", "This thing? Oh yeah, I guess it is.", "It could save his life! Please, can you give it to me?", ""])
speaking = Array[String](["P", "S", "S", "P", "S", "P", "S", "N"])
Dialogue = Array[Object]([SubResource("Resource_veh8i")])
animsL = Array[String](["", "", ""])
dialogueL = Array[String](["I guess. Here, take it.", "Thank you so much, we might be able to make it out of here thanks to you.", "Yeah, I’m a pretty cool guy. Alright good luck."])
speakingL = Array[String](["P", "S", "P"])
animsR = Array[String](["", ""])
dialogueR = Array[String](["Sucks to suck bozo but I got places to be. See ya.", "Oh… that’s…"])
speakingR = Array[String](["P", "S"])

[node name="Path" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Path"]
transform = Transform3D(50, 0, 0, 0, 10, 0, 0, 0, 4, 0, -6, 0)
material_override = ExtResource("2_hwe72")
mesh = SubResource("BoxMesh_02o2l")

[node name="StaticBody3D" type="StaticBody3D" parent="Path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path/StaticBody3D"]
shape = SubResource("BoxShape3D_j6a77")

[node name="Tree" parent="." instance=ExtResource("3_7c5bb")]
transform = Transform3D(1.29557, -0.0265001, -0.0484784, 0.0287127, 1.59591, 0.0407783, 0.103305, -0.111227, 0.596646, -6.66692, -1.85343, -6.552)

[node name="DialoguePoint" type="Area3D" parent="." groups=["TollBooth"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 10, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DialoguePoint"]
shape = SubResource("BoxShape3D_k7lrr")

[node name="Dialogue" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouPanel" type="Panel" parent="Dialogue"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -245.0
offset_right = 24.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Dialogue/YouPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "You"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Dialogue/YouPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Hi"
autowrap_mode = 3

[node name="StrangerPanel" type="Panel" parent="Dialogue"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -173.0
offset_right = 470.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Dialogue/StrangerPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "Stranger"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Dialogue/StrangerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Hi"
autowrap_mode = 3

[node name="Choices" type="Control" parent="Dialogue"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftButton" type="Button" parent="Dialogue/Choices"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.0
offset_right = -50.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4n78b")
text = "Give Pendant
[A]"

[node name="RightButton" type="Button" parent="Dialogue/Choices"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -40.0
offset_right = 250.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_4n78b")
text = "Leave
[D]"

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0.231335, -2)
texture = ExtResource("5_5hvso")

[connection signal="area_entered" from="DialoguePoint" to="." method="_on_dialogue_point_area_entered"]
[connection signal="pressed" from="Dialogue/Choices/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Dialogue/Choices/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
